@@ -1,3 +1,11 @@
+2001-07-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>
+
+	* install.el (install-file, install-elisp-module): Set file modes
+	according to `install-overwritten-file-modes'.
+
+	* poe-18.el (defalias): Remove alias to fset and define it by
+	using `defun'.
+
 2001-06-23  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>
 
 	* install.el (install-files): Do not make DEST directory when
